# ChangeLog for mate-base/caja
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mate-base/caja/ChangeLog,v 1.8 2014/12/08 23:37:22 tamiko Exp $

*caja-1.8.2 (08 Dec 2014)

  08 Dec 2014; Matthias Maier <tamiko@gentoo.org> +caja-1.8.2.ebuild,
  caja-1.8.1.ebuild:
  version bump; cleanup obsolete dependency (bug #519152)

  07 Jul 2014; Tom Wijsman <TomWij@gentoo.org> caja-1.8.1.ebuild:
  Add missing dconf dependency; fixes bug #515148, reported by Patrick Lauer.

  02 Jul 2014; Pacho Ramos <pacho@gentoo.org> caja-1.8.1.ebuild:
  x86 stable, bug 513714

  02 Jul 2014; Pacho Ramos <pacho@gentoo.org> caja-1.8.1.ebuild:
  amd64 stable, bug 513714

  07 Jun 2014; Agostino Sarubbo <ago@gentoo.org> caja-1.8.1.ebuild:
  Add ~x86, wrt bug #508072

  09 May 2014; Tom Wijsman <TomWij@gentoo.org> -caja-1.8.0.ebuild:
  Remove broken 1.8.0 release that spawned endless windows.

*caja-1.8.1 (09 May 2014)

  09 May 2014; Tom Wijsman <TomWij@gentoo.org> +caja-1.8.1.ebuild:
  Version bump to 1.8.1.

*caja-1.8.0 (10 Apr 2014)

  10 Apr 2014; Tom Wijsman <TomWij@gentoo.org> +caja-1.8.0.ebuild,
  +metadata.xml:
  New package for mate-base/caja, continuation of mate-base/mate-file-manager;
  version bump to 1.8.0.