@@ -3,24 +3,24 @@ Hash: SHA256
 
 DIST caja-1.8.1.tar.xz 3647396 SHA256 6706fc853a6cc6a2f0a012cd08b396f2f72607bc6c50cf6dfd5b38c64d7c6818 SHA512 d3bddd25c355e8f9aad810ccec302e08f5be4992dd8680a88f6ab552fd56f0a1517dd71eef6d3f7c35aca7acad7fed63f2af9fdbb0eb65e9b6751d97f7465367 WHIRLPOOL 3c0aaf0a23e142099312272feebb71ad9272e58b47d1bb152f12cb7aeda62235624d33ed66e5e4da3cd2c38bb4aeadfd9ccc9b0b92d456c4615b834afabdd215
 DIST caja-1.8.2.tar.xz 3596308 SHA256 99331a7439c346382c3b82c889fee9aaabca8760e9c7dfb60041c1fbcd2c6ac0 SHA512 0e704639ea895081f4175f88437d54635cf8b0891e04afda9f9cf87b6edae3ae32de35279f40518fb7044ef8fe38d1b2700acb5a93708e34e8ce2d6e7bc23ad6 WHIRLPOOL 28ec0d5f04c55bd71b368249a64bb0add323e3a0935d39e44b1f9c4919cfc4bfe3ce81d7e527a01abf033023405bdc272654a7ea05520004da7fb159e6abe47b
-EBUILD caja-1.8.1.ebuild 2404 SHA256 51e408d73f4605e875ef8d7eb5190f5c447bbeb90286a81ac96d39b83a5226eb SHA512 24dc5ed0aad1dffe5c8019445e09b691fc313281255bb64872d86b9543ac54ae8a0d52643e384d53c5e671ef85c6a3f6bd61ccfa8054b3d10418354060b655d9 WHIRLPOOL a3c57510e930b89ff30e0abb585a4743327e97ac3d5cfc4313a8da54cbe1b4e2ac74344a99379db52a6f55c916672cb5b2bbe6ca1ab781a99dc6f7ffdb2e15e1
-EBUILD caja-1.8.2.ebuild 2406 SHA256 f2688b5b3904154963021dd67c2f2a91d3b7515007b298f6ed877bcaaaa2d2c3 SHA512 8558978a98d67aa3987f6c554767f88ebd76f688508cdcc4dc4c0274631459650b67e527ecaef528b997f71aec13c95f92a0b728e3ecbd1108effb8b929ffdda WHIRLPOOL cb127c81b0e2a10317c533ab9d67a71c44fa37d7a858487cfbb18b4741eaa944e4e55188e6fba7242fe83cae89756b73d3e26968bb7e6c90ac20016a7644944f
-MISC ChangeLog 1267 SHA256 b61dd7ba108b1a00f88e2aa348ba5b439e16ef375a49efc1ea6cc5b8e9667d77 SHA512 dfd4b0e56d81732ecccc0ccdd91ad96357cd085905acf88ab516bc70f68fe063f6c5e31655be23b4d0aee6c5b5bc8ba4978841caafa3bf3244028bd857b2b026 WHIRLPOOL a2c6497c7d837a6a14b66594fd87ddda2154060e8075648418dabb6737e6e01a58dd59858e189e8aceda76d7238e3a72499e948e53a59381beba18d2e90e04c8
+EBUILD caja-1.8.1.ebuild 2402 SHA256 7465b8f6470d13a6ffc99a4f686584814744cbbfd31e640002b347dacd0b49e1 SHA512 9790b297d11a4f1a8207725ea8eb2e9c0faa07f7bcf2c048c10e3eb03962bb1e8073b43472c838f79c76424f23baae631120aa9133e7bf0ab15bfa732da295bc WHIRLPOOL 8b591022780c57fbb50ba8fa37063d2fa5358e8267a4e4622bf556e92520b70e22cad8592fd8b78bf07e694288e58d2537b05a6cbb0b07ffb1f8c5ba847959a1
+EBUILD caja-1.8.2-r1.ebuild 2387 SHA256 d0ec62f023d90a9a6784d3098e3126b57ebbbad2ff413cbbe95d8a580c559b89 SHA512 dcd45c4947f78390aca82d5dbac9bc337a522bea84e45c2afccbd5ace89338b6597cbdb508d4006600d4fd448158d722abd87b904c2964491d73e48d17bc86a0 WHIRLPOOL 3749dccd4cc3398f5b55ab1fd2940ed7cca2b6d23a289af1c8c3255aa294d89f37dd640b27ff4b851de59f4f8e713406925d3f7fc92fb700201cf9bd7114c09b
+MISC ChangeLog 1451 SHA256 747a2445dddec2e4a69bb7b2a95bc3e66ce8326c08e38bdaf2160ed62e8f99d1 SHA512 d0f6299506419fd14b34033552a3e3d21c2dcfe5c6ecfee5944dad19777a3d2ff0152db46046992c277705b5b29bfa1a013e829bc7389ea2be94c8c2c70446b7 WHIRLPOOL 0f2ef829aaf4c3de46f6cc1eae583c0ffd45fae744fc9d8eb058a2b2570216a4c40af2a4c58e9bcc6c0384b5f2a050e6c2cee9e10496215aabed6d89a058ee7a
 MISC metadata.xml 499 SHA256 f7df17342fc39ef91a30e5a5fc3fea7083ce3884ae3037419458e01ed06712f0 SHA512 b949a905f073339113ba7de1d7d89a3fa5637a692f5e727c6b1be3bcda6aee768a3f87687eb581324e493cc28a08b6c31065d358d278488e3468fb4a8225e04a WHIRLPOOL b3b2c548a3168d0d5a10067108e907c95af153ecfa22abdf3b1e50a87a26fefa123984975190fd9f3b72fe564abd9135c051ad80a9220556d6412343e18d7671
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.1
 
-iQIcBAEBCAAGBQJUhjYzAAoJELhOzYlK7nn/+OIP/RugvRBf+AbaEMXP24+w+u7H
-n6WXVAvMnOEpSIShg+3SMyNM8F162sbxMG9Npi7ItEG2/KnlnarSI6GdBeGbU+oj
-3ZWInHwMC8oFfifXg6OBYacan9M4b9mx1pgpcvWxu+20lv6SQxbIP0xu3BSa3kXt
-ljvoTOtvo5U0b1/TBMi84MuPgAuhJiZ+B3So4R6W5+vVHcWsIe/N4CsRHJuWO/y6
-eZlhc7a/bHUgVfOCha5E9mWsVDF3FK4M6HN5Xr9MQ/EY1ZJbPn46s2PgVN7FW5sM
-TMHrlHG74DLvjJDUpWjs8PcMjjRy8kyH35XM0YuD7dbWZi7JD1gHJqh1NR4QOG4r
-kyjr9m4b0FvUgvO4Heymh8bSmZhi+a70+1ty5Zoc9ma4DzQW/wwwMRbbuVKHQyqX
-Yd0WQVMA5LIzS0VMHBCt0roDggrO1OgpG2xZJ3Neb0uvLw4VftZ3VslN2Rke2gan
-/owt9w4aQFki6dOfvv+b9pCG1qNTizJGk+AV98td53rTPHhSX8ymPWBsYOHL11/+
-k6EB/zCd6SgHFE89bkXgYriqew9rfnWJ+85qhGspDDaCJA3GoHuoMyr7ccyD7y0y
-gw91NGc6vmTydGLiAoNG3Ks5fNE4wY25+AjnzA9Kud//oSZO9w1LEx8TeIyJMhCq
-BY2jkH3RmbuBnt7h8k86
-=S//8
+iQIcBAEBCAAGBQJUhjeEAAoJELhOzYlK7nn/39kQAML9GUxgqBKRdRx99QvXCqk0
+I6E6McTDJLlGq3xBnjFHvpzQVGcndWM5hEt68fnVYPb913cwbt+o9znC7QLKb3Ld
+ylQxk3mOiSxgGem6VZyLAIGvFU9mJ98buf/I0P5pe2gk0y5OZfuEXsE11Sqf5BYj
+6Qa00fG0MtmP5BFww8oQuFX/oyBdyX7lCZ+tcvKrbGIDSVz7RhxKtPjbsSZvOjdM
+NEhy2Y40z4IOuwmbaSNc3xhYeiq9mgCnXynSmn/PLrBn90YnxgZqAqTssNerkFaq
+A4Ki/jHsMq/qQFtXJgUCm6U4U/33UpkCNcLZhbX7JBFB1/S+t7RpSo/cTTJagfoe
+lKW6Ne5bad5j3BcxLggX4FGrCvVCbw7wHWsCNKsZ+eh3ndHt5BYGIqR8KOcpJYFq
+UkCn7E+IG9q4wYN19jPIq14GLt1DglW1/FHCeKyfCvDcHaRFKIn+kRu6UFpr7u2H
+C9YQz7Ue9DTAMveQmcq/w6NtNV/7JKH+WJG46wFU86igqtx4X85z1tlsZL/4z1aS
+MvfJNJgTpBiskU2XSphPhGCiFxmZ1lRJDq5BpylXHK8xM4caWh3qo5lXBjqW9YQh
+VlPHLHTFRWa4Ko6U+bNOeUYEGf1+iezrrccccYe9McsoYA/CQUgg//vq6o6kemIr
+5da+DG3im+TwlT8fqJV5
+=TA02
 -----END PGP SIGNATURE-----
