@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/mate-base/caja/caja-1.8.1.ebuild,v 1.6 2014/12/08 23:37:22 tamiko Exp $
+# $Header: /var/cvsroot/gentoo-x86/mate-base/caja/caja-1.8.1.ebuild,v 1.7 2014/12/08 23:42:59 tamiko Exp $
 
 EAPI="5"
 
@@ -19,7 +19,7 @@ LICENSE="GPL-2 LGPL-2 FDL-1.1"
 SLOT="0"
 KEYWORDS="amd64 x86"
 
-IUSE="X +mate +introspection +unique xmp"
+IUSE="+mate +introspection +unique xmp"
 
 RDEPEND="dev-libs/atk:0
 	>=dev-libs/glib-2.28:2
