@@ -1,6 +1,12 @@
 # ChangeLog for mate-base/caja
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mate-base/caja/ChangeLog,v 1.8 2014/12/08 23:37:22 tamiko Exp $
+# $Header: /var/cvsroot/gentoo-x86/mate-base/caja/ChangeLog,v 1.9 2014/12/08 23:42:59 tamiko Exp $
+
+*caja-1.8.2-r1 (08 Dec 2014)
+
+  08 Dec 2014; Matthias Maier <tamiko@gentoo.org> +caja-1.8.2-r1.ebuild,
+  -caja-1.8.2.ebuild, caja-1.8.1.ebuild:
+  just drop X use-flag wrt bug #526204
 
 *caja-1.8.2 (08 Dec 2014)
 
